# django-turtle-shell

./: AUTHORS  LICENSE  MANIFEST.in  README.rst  UsageGuide.rst  pyproject.toml  pytest.ini  settings_test.py  setup.cfg
turtle_shell/: README.rst  __init__.py  apps.py  fake_pydantic_adpater.py  function_to_form.py  graphene_adapter.py  graphene_adapter_jsonstring.py  models.py  pydantic_adapter.py  utils.py  views.py
turtle_shell/migrations/: 0001_initial.py  0002_auto_20210411_1045.py  0003_auto_20210411_1104.py  0004_auto_20210411_1223.py  0005_auto_20210412_2320.py  0006_executionresult_traceback.py  0007_auto_20210413_0626.py
turtle_shell/templates/turtle_shell/: executionresult_create.html  executionresult_detail.html  executionresult_list.html  executionresult_summaryrow.html  overview.html
turtle_shell/templatetags/: pydantic_to_table.py
turtle_shell/tests/: conftest.py  test_django_cli2ui.py  test_form_comparisons.py  test_graphene_adapter.py  test_pydantic_adapter.py  test_utils.py  utils.py
